k8s/dev-manifests/comments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-posthub--env
  labels:
    name: ns-posthub--env

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments--env
  namespace: ns-posthub--env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments--env
  template:
    metadata:
      labels:
        app: comments--env
    spec:
      containers:
        - name: comments--env
          # image: acr17713.azurecr.io/#{CUSTOMIMAGE_TAG}#
          image: princemokut/comments
          resources:
            requests:
              memory: "250M"
              cpu: "350m"
            limits:
              memory: "900M"
              cpu: "1500m"
          readinessProbe:
            httpGet:
              path: /api/comments/healthcheck
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: comments-secret

---
apiVersion: v1
kind: Service
metadata:
  name: comments-service--env
  namespace: ns-posthub--env
spec:
  selector:
    app: comments--env
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: comments--env
