k8s/dev-manifests/posts.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-posthub--env
  labels:
    name: ns-posthub--env

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts--env
  namespace: ns-posthub--env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts--env
  template:
    metadata:
      labels:
        app: posts--env
    spec:
      containers:
        - name: posts--env
          # image: acr17713.azurecr.io/#{CUSTOMIMAGE_TAG}#
          # image: acr17713.azurecr.io/posts
          image: princemokut/posts
          resources:
            requests:
              cpu: "250m"
              memory: "350Mi"
            limits:
              memory: "900M"
              cpu: "700m"
          readinessProbe:
            httpGet:
              path: /api/posts/healthcheck
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: posts-secret

---
apiVersion: v1
kind: Service
metadata:
  name: posts-service--env
  namespace: ns-posthub--env
spec:
  selector:
    app: posts--env
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: posts--env
