k8s/dev-manifests/ui.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-posthub--env
  labels:
    name: ns-posthub--env

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui--env
  namespace: ns-posthub--env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui--env
  template:
    metadata:
      labels:
        app: ui--env
    spec:
      containers:
        - name: ui--env
          # image: acr17713.azurecr.io/#{CUSTOMIMAGE_TAG}#
          image: princemokut/ui
          resources:
            requests:
              cpu: 250m
              memory: 350Mi
            limits:
              memory: "900M"
              cpu: "1100m"
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ui-secret

---
apiVersion: v1
kind: Service
metadata:
  name: ui-service--env
  namespace: ns-posthub--env
spec:
  selector:
    app: ui--env
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: ui--env
